--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>coffee website</title>
+  <title>coffee website | codingNepal</title>
   <!-- Linking Font Awesome for icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
@@ -34,7 +34,7 @@
           <a href="#contact" class="nav-link">Contact</a>
         </li>
        </ul>
-       <button id="menu-open-button" class="fas fa-bars"></button>
+           <button id="menu-open-button" class="fas fa-bars"></button>
     </nav> 
   </header>
   <main>
